그래프 정상출력, 품목 변경